--- a/css/index.css
+++ b/css/index.css
@@ -1,39 +1,3 @@
-#header{
-	background: #26C688;
-	height: 90px;
-	color: #fff;
-	width: 100%
-}
-#header_top{
-	height: 60px;
-	text-align: center;
-	line-height: 60px;
-	position: relative;
-}
-#header_img{
-	position: absolute;
-	height: 40px;
-	width: 40px;
-	background: #fff;
-	border-radius: 50%;
-	text-align: center;
-	top: 10px;
-	left: 13px;
-	line-height: 40px;
-}
-#header_img img{
-	width: 23px;
-}
-#header_top span{
-	font-weight: bold
-}
-#header_nav ul li{
-	float: left;
-	width: 20%;
-	height: 30px;
-	line-height: 30px;
-	text-align: center
-}
 .swiper-container {
     width: 100%;
     height: 170px;
@@ -77,37 +41,36 @@
 	float: right;
 	width: 80px;
 	text-align: center;
-	position: relative;
-	z-index: 2;
 }
 .list_titel{
 	display: inline-block;
 	float: left;
 	color: #1DBE96
 }
-#footer{
-	height: 55px;
-	width: 100%;
-	position: fixed;
-	bottom: 0;
-	background: #fff;
-	border-top:1px solid #ccc 
-	z-index: 1;
+#myCarousel{
+	margin-top: 90px;
 }
-#footer_content{
-	width: 100%;
+/* 首页轮播图样式 */
+.swiper-container {
+    width: 100%;
+    height: 170px;
 }
-.footer_list{
-	width: 20%;
-	float: left;
-	text-align: center
-}
-.footer_list img{
- display: block;
- margin: 6px auto;
- width: 17px;
-}
-.footer_list a{
-	color: #000;
-	font-size: 14px
+
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: lightblue;
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
 }
