--- a/css/talklist.css
+++ b/css/talklist.css
@@ -4,7 +4,6 @@
     padding-left: 15px;
     height: 50px;
     line-height: 50px;
-
 }
 .news_t{
     margin: 10px 0;
@@ -12,7 +11,8 @@
 #footer{
     position:fixed;
     bottom: 0;
-    width: 100%
+    width: 100%;
+    background: #fff;
 }
 #footer textarea{
     width: 100%;
