--- a/css/pkstart.css
+++ b/css/pkstart.css
@@ -39,7 +39,7 @@ html,body{
 }
 .support{
     font-size: 12px;
-    color: #F5F5F5
+    color: #ccc
 }
 .my_media_img{
     width: 80px;
@@ -63,7 +63,7 @@ html,body{
     margin-top: 0px;
 }
 .my_meia_titel img{
-    width: 30px;
+    width: 28px;
 }
 #pkstart_footer{
     text-align: right;
