--- a/css/topup.css
+++ b/css/topup.css
@@ -1,21 +1,14 @@
 html,body{
     background-color: #fff;
 }
-#otherheader{
-    background: #32CF85;
-    position: relative;
-}
-.otherheader_right{
-    display: none
-}
 #topup_top{
     width: 100%;
-    height:200px;
+    height:140px;
     background: url(../img/my_momey.png) no-repeat;
     background-size: 100% 100%;
     color: #fff;
     text-align: center;
-    padding-top: 90px;
+    padding-top: 40px;
 }
 #topup_top p{
     margin-top:10px;
@@ -40,7 +33,8 @@ html,body{
 }
 #topup_list ul li:last-child{
     float: right;
-}	.placeholder{
+}
+.placeholder{
     width: 100px;
     height: 60px;
     color: #fff;
@@ -103,9 +97,4 @@ html,body{
     color: #fff;
     height: 50px;
     line-height: 50px;
-}
-.topup_num{
-    display: inline-block;
-    padding: 0;
-    margin: 0;
 }
