--- a/css/myindex.css
+++ b/css/myindex.css
@@ -1,8 +1,11 @@
 html,body{
 	background-color: #eeeeee;
 }
+#otherheader{
+	z-index: 999;
+}
 #myindex_img{
-	height: 100px;
+	padding: 20px 0;
 	background-color: #32CE85;
 	width: 100%;
 	text-align: center;
@@ -11,7 +14,9 @@ html,body{
 #myindex_img img{
 	width: 60px;
 }
-
+.otherheader_right{
+	display: none;
+}
 #my_placeholder .placeholder{
 	text-align: center;
 	height: 80px;
@@ -43,6 +48,7 @@ html,body{
 	border:4px solid #eeeeee;
 	margin-top: 20px; 
 	float: left;
+	margin-left: 15px;
 }
 .analysis_left p{
 	margin: 0;
@@ -86,17 +92,16 @@ html,body{
 }
 .myidnex_titel{
 	background-color: #eeeeee;
-	line-height: 30px;
-	height: 30px;
+	line-height: 40px;
+	height: 40px;
 	position: relative;
 	padding-left: 30px;
-	margin-bottom: 15px;
 }
 .myidnex_titel_line{
 	position: absolute;;
 	background-color: #32CE85;
 	width: 3px;
-	top:2px;
+	top:5px;
 	left: 15px;
 	height: 25px;
 }
@@ -121,6 +126,9 @@ html,body{
 		background-color: #fff;
 		padding: 0 5px;
 		margin-bottom: 12px;
+		font-size: 13px;
+		height: 85;
+		padding-top: 23px;
 	}
 	.my_type_pk{
 		display: block;
@@ -129,7 +137,7 @@ html,body{
 		height: 20px;
 		line-height: 20px;
 		background-color: red;
-		top: 0px;
+		top: -20px;
 		background-color: #32CF85;
 		color: #fff;
 		text-align: center;
