--- a/css/rush.css
+++ b/css/rush.css
@@ -10,6 +10,9 @@ html,body{
     text-align: center;
     padding-top: 40px;
 }
+.otherheader_right{
+    display: none
+}
 #topup_top p{
     margin-top:10px;
 }
