--- a/css/topup.css
+++ b/css/topup.css
@@ -1,6 +1,12 @@
 html,body{
     background-color: #fff;
 }
+.topup{
+    padding-top: 49px; 
+}
+.otherheader_right{
+    display: none
+}
 #topup_top{
     width: 100%;
     height:140px;
@@ -8,7 +14,6 @@ html,body{
     background-size: 100% 100%;
     color: #fff;
     text-align: center;
-    padding-top: 40px;
 }
 #topup_top p{
     margin-top:10px;
