--- a/css/goods.css
+++ b/css/goods.css
@@ -19,7 +19,7 @@ html,body{
 .my_placeholder_money{
     font-size: 12px;
     padding-bottom: 10px;
-    color: #666;
+    color: #888;
 }
 #my_pic{
     height: 200px;
@@ -46,9 +46,9 @@ html,body{
     transform: scaleY(0.5);
     z-index: 2;
 }
-#goods_content{
+.goods_content{
     padding: 15px;
-    color: #666;
+    color: #888;
     position: relative;
 }
 .line{
