--- a/css/goodslist.css
+++ b/css/goodslist.css
@@ -1,30 +1,6 @@
 html,body{
     background: #eeeeee;
 }
-/* 首页轮播图样式 */
-.swiper-container {
-    width: 100%;
-    height: 170px;
-}
-
-.swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: lightblue;
-    /* Center slide text vertically */
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-}
 #otherheader{
     z-index: 9999;
 }
@@ -109,4 +85,23 @@ html,body{
     ;text-align:center;
     width:100%;
     display: none;
+}
+.otherheader_right{
+    display: none;
+}
+.my_weui_flex{
+    position: relative;
+    padding-top: 50px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    background: #fff;
+    margin-bottom: 10px;
+}
+.my_lien{
+    height: 30px;
+    border-right: 1px solid #999;
+    position: absolute;
+    left: 50%;
+    top: 62px;
 }
