--- a/css/goods.css
+++ b/css/goods.css
@@ -81,3 +81,11 @@ html,body{
     border: 0px;
     background: #26C688;
 }
+.weui-picker__hd a{
+    display: inline-block;
+    width: 50%;
+    text-align: center;;
+    color: #fff;
+    height: 50px;
+    line-height: 50px;
+}
