--- a/css/common.css
+++ b/css/common.css
@@ -106,7 +106,7 @@ textarea{
 	width:20px
 }
 .my_footer_a_home img:first-child{
-	width: 22px;
+	width: 20px;
 	margin-bottom:4px;
 }
 
@@ -122,7 +122,8 @@ textarea{
 }
 
 .footer_list .footer_list_t{
-	margin-bottom:4px;
+    margin-bottom:3px;
+    margin-top: 7px;
 }
 .footer_list_sai{
 	position: relative;top:-30px
@@ -211,6 +212,9 @@ textarea{
 }
 #otherheader .otherheader_right img{
     width: 24px;
+}
+.otherheader_left_img{
+    width: 11px;
 }
 /* 竞猜头部公共样式 */
 #pkend_header{
