--- a/css/ranking.css
+++ b/css/ranking.css
@@ -5,9 +5,6 @@ html,body{
     padding: 0;
     margin: 0;
 }
-.otherheader_right{
-    display: none;
-}
 #ranking_nav{
     width: 100%;
     height: 50px;
@@ -59,7 +56,6 @@ html,body{
     background: #fff;
     width: 100%;
     line-height: 70px;
-    border-bottom: 1px solid #ccc;
 }
 .my_top_img{
     width: 45px;
@@ -71,4 +67,10 @@ html,body{
 }
 #integral{
     display: none;
+}
+.my-text_xs_4{
+    padding:  0
+}
+.ranking_my_list_f{
+    margin-top: 10px;
 }
