--- a/css/common.css
+++ b/css/common.css
@@ -128,6 +128,25 @@ textarea{
 .footer_list_sai{
 	position: relative;top:-30px
 }
+.my_footer_a_bang img{
+    width: 21px
+}
+.my_footer_sai img{
+    width: 48px;
+    margin-bottom: 8px
+}
+.my_footer_show img{
+    width: 22px
+}
+.my_footer_my .act_img{
+    width: 19px;
+    margin-bottom: 8px
+}
+.my_footer_my .no_act{
+    width: 23px;
+    margin-bottom: 3px;
+    margin-top:8px;
+}
 /* 头部部导航栏样式（有导航 */
 #header{
 	background: #26C688;
@@ -221,7 +240,7 @@ textarea{
 #pkend_header{
     position: fixed;
     top: 0;
-    height: 94;
+    height: 94px;
     background: #26C688;
     width: 100%;
     z-index: 12;
@@ -257,11 +276,7 @@ textarea{
     background:url(../img/pk_name_bg.png) no-repeat;
     background-size:100% 100%; 
     width: 100%;
-    margin-top: 15px;
     line-height: 30px;
-}
-.pkend_bottom_text{
-    font-size: 16px;
 }
 #pk_name{
     text-align: center;
@@ -280,8 +295,7 @@ textarea{
     text-align: center;
     top: 0;
 }
-.pkend_results{
-    position: relative;
-    top: 15px;
-}
-a{text-decoration:none;}
+
+a:link{text-decoration:none ;}
+a:visited {text-decoration:none;}
+a:hover {text-decoration:none ; color:#333;}
