--- a/css/index.css
+++ b/css/index.css
@@ -86,6 +86,11 @@ html,.weui-cell{
     margin: 0 auto;
     font-size: 16px;
     text-align: center;
+    text-align: center;
+	overflow: hidden;
+	white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width:100px;
 }
 .my_img{
     width: 80px;
