--- a/css/pkstart.css
+++ b/css/pkstart.css
@@ -1,6 +1,7 @@
 html,body{
     width: 100%;
     height: 100%;
+    background: #eeeeee
 }
 #pkstart_top{
     text-align: center;
@@ -8,11 +9,61 @@ html,body{
     line-height: 40px;
     background: #ffffff;
     width: 100%;
-    margin-top:87px; 
+    margin-top:110px; 
 }
 #pkstart_content{
     padding: 15px;
 }
+
+
+
+.pk_countries{
+    text-align: center;
+    height: 50px;
+    padding-top: 17px;
+}
+.pk_countries_guoone{
+    width: 40px;
+    margin-left: 5px;
+}
+.pk_countries_pk_img{
+    margin: 0 15px;
+    width: 18px;
+}
+.pk_countries_guotwo{
+    margin-right: 5px;
+    width: 40px;
+}
+.pkend_bottom_text{
+    text-align: center
+}
+.pk_title{
+    display: inline-block;
+    max-width:120px;
+    overflow: hidden;
+	white-space: nowrap;
+    text-overflow: ellipsis;
+}
+.pk_countries_pk_img span{
+    display: inline-block;
+    text-align: center;
+	overflow: hidden;
+	white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 200px;
+}
+.pk_time_img{
+    width: 14px;
+    margin-right: 2px;
+    display: inline-block;
+    position: relative;
+    top: -2px;
+}
+
+
+
+
+
 #pkstart_content_but{
     text-align: center;
     background: #FFFFFF;
@@ -107,6 +158,9 @@ html,body{
     top:0px;
     right: 15px;
 }
+#close img{
+    width:20px;
+}
 #bet_content{
     padding: 0 20px;
 }
@@ -132,6 +186,12 @@ html,body{
     border-right:1px solid #ccc;
     border-left:1px solid #ccc 
 }
+#bet_but ul .bet_but_num input{
+    border: none;
+    width: 100%;
+    text-align: center;
+    height: 40px;
+}
 #bet_but ul li:last-child{
     font-size: 20px;
 }
@@ -148,9 +208,36 @@ html,body{
     letter-spacing: 2px;
     background: #2ACF82;
 }
+.progress-bar-my{
+    width: 60%;
+}
+.danqian{
+    width: 38px;
+    margin: 0 auto
+}
+.my_font_bold_num{
+    color: #ccc
+}
+.my_meia_titel_list{
+    height: 50px;
+}
 #my_submit{
     margin-top: 15px;
 }
 #my_submit{
     text-align: center
+}
+.my-but-style-t{
+    background: #F5F5F5;
+    border-radius: 0px;
+    width: 80px
+}
+.my_meia_titel_line_b{
+    margin-left:6px; ;
+    color: #ccc;
+    font-size: 13px;
+}
+.choose_type{
+    border:none;
+    background: #eeeeee;
 }
