--- a/css/quiz.css
+++ b/css/quiz.css
@@ -2,8 +2,33 @@
     padding: 0;
     margin: 0;
 }
-#otherheader{
-    z-index: 8;
+}
+/* 轮播图样式 */
+.swiper-container {
+    width: 100%;
+    height: 170px;
+}
+
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: lightblue;
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
+.swiper-slide img{
+	width:100%;
 }
 #quiz_top{
     padding-top:50px;
@@ -43,12 +68,23 @@
     height: 40px;
     line-height: 40px;
     text-align: center;
+    overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 }
 .pk_top{
     text-align: center;
     height: 40px;
     position: relative;
     line-height: 40px;
+}
+.pk_top span{
+    display: inline-block;
+    max-width: 150px;
+    margin: 0 auto;
+    overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 }
 .pk_but{
     display: block;
@@ -63,6 +99,7 @@
     top:5px;
     color: #00B7EF;
 }
+
 .pk_countries{
     text-align: center;
     height: 50px;
@@ -80,12 +117,14 @@
     margin-right: 5px;
     width: 40px;
 }
+
+
 .pk_state{
     text-align: center;
     height: 50px;
     line-height: 50px;
 }
-.pk_top,.pk_countries,.pk_state{
+.pk_top .pk_countries,.pk_state{
     background: #fff;
 }
 .my_media{
@@ -110,6 +149,10 @@
     font-size: 15px;
     margin-top: 1px;
 }
+.fr{
+    margin-right:15px;
+    margin-top:3px
+}
 #quiz_top_right{
     width: 100px;
     background: #EEEEEE;
@@ -119,6 +162,9 @@
     line-height: 35px;
     margin-top:8px 
 }
+.quiz_top_right img{
+    width: 20px;
+}
 #quiz_top_right span{
     margin: 0 8px;
 }
@@ -126,6 +172,12 @@
     float: left;
     margin-top: 10px;
     margin-left:15px; 
+}
+.quiz_top_group_one img{
+    width: 35px;
+}
+.quiz_top_group_two {
+    margin-left:10px;
 }
 #quiz_header{
     background: #26C688;
