--- a/css/determine.css
+++ b/css/determine.css
@@ -6,6 +6,10 @@ html,body{
     padding-top: 50px;
     background: #fff
 }
+#dete{
+    padding: 65px 0 15px 0;
+    display: none;
+}
 .otherheader_right{
     display: none
 }
@@ -16,6 +20,9 @@ html,body{
     background: #fff;
     text-align: center;
     padding-left: 15px;
+}
+.my_wei_title{
+    margin: 0;
 }
 .my_add{
     display: inline-block;
@@ -46,4 +53,147 @@ html,body{
     color: #fff;
     height: 50px;
     line-height: 50px;
+}
+.panel_access_titel{
+    clear: both;
+}
+.panel__hd_type{
+    position: relative;
+     text-indent: 23px;
+}
+.panel__hd_type img{
+    position: absolute;
+    display: block;
+    width: 20px;
+    top:11px
+}
+.my_style_hd{
+    padding: 0;
+    margin: 0
+}
+.orderdetails_page{
+    padding: 0;
+}
+.my_type_t{
+    float: right;
+    position: relative;
+    padding-left:20px
+}
+
+.my_type_t span{
+    display: inline-block;
+    color:#26C688
+}
+.my_type_t img{
+    width: 18px;
+    position: absolute;
+    top:4px;
+    left: 0
+}
+.my_box__desc{
+    text-align: right
+}
+.my_box__desc_b{
+    padding: 0;
+    margin: 0
+}
+.orderdetails_page_shan{
+    padding: 10px 15px;
+}
+.orderdetails_page_xiao{
+    text-align: left;
+    color: #666;
+}
+.orderdetails_page_yun{
+    text-align: right
+}
+.orderdetails_page_yang{
+    position: relative;
+    float: right;
+    padding-left: 20px;
+}
+.orderdetails_page_yang img{
+    width: 18px;
+    display: block;
+    position: absolute;
+    top:1px;
+    left: 0;
+}
+.orderdetails_page_yang{
+    color:#26C688;
+}
+.my_style_yun{
+    text-align: left
+}
+.my_style_yun_right{
+    text-align: right
+}
+.my_style_yun_placeholde{
+    position: relative;
+}
+.my_style_yun_img{
+    position: relative;
+    float: right;
+    padding-left: 20px;
+}
+.my_style_yun_img img{
+    width: 18px;
+    display: block;
+    position: absolute;
+    top:1px;
+    left: 0;
+}
+.my_style_yun_img span{
+    color:#26C688;
+}
+.orderdetails_page_b{
+    padding-bottom:0;
+    height: 58px;
+}
+.my_style_add{
+    padding: 0;
+    margin: 0;
+    margin-top: 15px;
+}
+.weui-animate-slide-up_my{
+    z-index: 9999999;
+}
+.my_wei_input{
+    max-width: 95%;
+    height: 50px;
+}
+.my_picker__bd_h{
+    height: 210px;
+}
+.my_clels_form{
+    margin-top: 0
+}
+.my_add_addr{
+    padding: 15px
+}
+.my_wei_but_g{
+    padding:0;
+    margin:0;
+    text-align:center;
+}
+.my_wei_but_o{
+    color:#888;
+    background-color:#EEEEEE;
+    text-align:center
+}
+.my_wei_but_t{
+    color:#fff;
+    background-color:#30CE81;
+    text-align:center
+}
+#toast{
+    display: none;
+}
+#toast_add{
+    display: none;
+}
+.weui-icon-cancel_s{
+    color: #cccccc;
+    font-size: 34px;
+    margin:23px 0 10px 0
 }
