--- a/css/goods.css
+++ b/css/goods.css
@@ -28,10 +28,12 @@ html,body{
     background: #eeeeee
 }
 #my_pic img{
-    height: 100%;
     width: 100%;
+    height: 200px;
 }
-
+.my_flex_border{
+    position: relative;
+}
 .my_flex_border :after{
     content: " ";
     position: absolute;
@@ -51,6 +53,7 @@ html,body{
     padding: 15px;
     color: #888;
     position: relative;
+    padding-bottom: 50px;
 }
 .line{
     width: 100%;
@@ -80,4 +83,19 @@ html,body{
     color: #fff;
     border: 0px;
     background: #26C688;
+}
+#footer a{
+    display: block;
+    width: 100%;
+    height: 100%;
+    color: #ffffff
+}
+.my_page_bd{
+    padding: 0 15px;
+}
+.my_placeholder_top{
+    margin: 10px 0 7px 0;
+}
+.money_img{
+    width: 20px
 }
