--- a/css/quiz.css
+++ b/css/quiz.css
@@ -154,12 +154,13 @@
     margin-top:3px
 }
 #quiz_top_right{
-    width: 100px;
+    min-width: 100px;
     background: #EEEEEE;
     border-radius: 20px;
     text-align: center;
     height: 35px;
     line-height: 35px;
+    padding: 0 5px;
     margin-top:8px 
 }
 .quiz_top_right img{
