--- a/css/first.css
+++ b/css/first.css
@@ -223,27 +223,58 @@ html,body{
     overflow: hidden;
 }
 .my_hb{
-    width: 220px;
-    height: 220px;
+    width: 250px;
+    height: 260px;
     background: url(../img/hb.png) no-repeat;
     background-size: 100% 100%;
-    padding-top: 40px;
+    padding-top: 29px;
     margin: 0 auto;
-    margin-top: 153px;
+    margin-top: 100px;
 }
 .c_text{
     display: block;
     margin: 0 auto;
-    width: 45px;
-    height: 45px;
+    width: 48px;
+    height: 48px;
+    margin-bottom: 15px
 }
 .my_hb_bg{
     width: 300px;
     height: 300px;
+    text-align: center;
 }
 .cl_img{
     position: absolute;
-    top: 133px;
-    width: 28px;
-    right: 38px;
+    top: 82px;
+    width: 30px;
+    right: 20px;
+    
+}
+.cl_title{
+    font-size: 16px;
+    color: #fff;
+    text-align: center;
+    padding-top: 2px;
+    margin-bottom: 31px;
+}
+.cl_denglu{
+    font-size: 16px;
+    color: #fff;
+    margin-bottom: 10px;
+
+}
+.cl_feng{
+    font-size: 18px;
+    color: #f8c292;
+    margin-bottom: 2px;
+}
+.cl_but{
+    width: 150px;
+    height: 35px;
+    line-height: 35px;
+    text-align: center;
+    border-radius: 15px;
+    background: #fff;
+    margin: 0 auto;
+    color: #d95209
 }
