--- a/css/user.css
+++ b/css/user.css
@@ -39,3 +39,30 @@ body{
 .user_img_t{
 	margin-left: 5px;
 }
+
+.weui-dialog {
+    position: fixed;
+    z-index: 5000;
+    width: 50%;
+    max-width: 300px;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+    background-color: #fff;
+    text-align: center;
+    border-radius: 3px;
+    overflow: hidden;
+}
+.song_img img{
+	width: 20px;
+	position: relative;
+	display: inline-block;
+	top: 4px;
+}
+.my_song_but{
+	height: 26px;
+	line-height: 26px;
+	margin-top: 15px;
+	font-size: 14px
+}
