--- a/static/css/common.scss
+++ b/static/css/common.scss
@@ -1,7 +1,3 @@
-* {
-    box-sizing: border-box;
-}
-
 html, body, div, span, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 abbr, address, cite, code,
@@ -18,9 +14,6 @@ time, mark, audio, video {
     padding: 0;
     border: 0;
     outline: 0;
-    font-size: 100%;
-    vertical-align: baseline;
-    background: transparent;
 }
 html,
 body {
@@ -31,6 +24,15 @@ ul, ol {
 }
 
 /* 公共样式 */
+.my-text-center{
+    text-align: center;
+}
+.my-text-color-t{
+    color: #2ACF82;
+}
+.my-font-bold{
+    font-weight: bold;
+}
 .fl {
     float: left;
 }
@@ -61,155 +63,196 @@ ul, ol {
 .mgt20 {
     margin-top: 20px;
 }
-
-.app-wraper {
+.mgl10 {
+    margin-left: 10px;
+}
+.indexlist{
+    padding: 0 10px;
+}
+a{
+    color: #333;
+    text-decoration: none;
+}
+textarea{
+    outline:none;
+    resize:none
+}
+/* 底部导航栏样式 */
+#footer{
+    height: 55px;
     width: 100%;
-    margin: 0 auto;
-    .header-outer {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100px;
-    }
-    .chinese-title {
-        height: 40px;
-        line-height: 40px;
-        color: #000;
-        font-size: 26px;
-        text-align: center;
-        letter-spacing: 5px;
-    }
-    .english-title {
-        height: 40px;
-        line-height: 40px;
-        color: #AEAEAE;
-        font-size: 14px;
-        text-align: center;
-        letter-spacing: 12px;
-    }
-}
-.module-box {
-    padding: 40px 0;
-    margin: 0 auto;
-}
-
-.flex-outer {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    .flex-inner {
-        flex: 1;
-    }
-}
-.table-box-outer {
-    display: table;
-    width: 100%;
-    height: 100%;
-    .table-box-inner {
-        display: table-cell;
-        vertical-align: middle;
-    }
-}
-
-/* 英文名 - 中文名 - 描述 */
-.eng-name {
-    color: #D7D7D7;
-    font-size: 12px;
-}
-.cha-name {
-    padding: 15px 0 10px;
-    color: #020202;
-    font-size: 16px;
-    font-weight: 700;
-}
-.item-desc {
-    color: #8A8A8A;
-    font-size: 14px;
-}
-
-.fixed-show-enter-active, .fixed-show-leave-active {
-    transition: all .5s ease;
-}
-.fixed-show-enter, .fixed-show-leave-to {
-    opacity: 0;
-}
-
-/* 轮播 */
-.slide-item-box {
-    // display: flex;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    transition-duration: 800ms;
-}
-.slide-item {
-    // display: flex;
-    float: left;
-    width: 100%;
-    height: 100%;
-    // box-pack: center;
-    // justify-content: center;
-    // align-items: center;
-    // flex-shrink: 0;
-}
-.slide-bar {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    padding: 20px 0;
-    text-align: center;
-    .bar-icon {
-        display: inline-block;
-        width: 10px;
-        height: 10px;
-        border-radius: 10px;
-        margin: 0 5px;
-        background: rgba(102, 102, 102, 0.5);
-        &:hover {
-            background: rgba(102, 102, 102, 0.8);
-        }
-        &.on {
-            background: #fff;
-            &:hover {
-                background: #fff;
-            }
-        }
-    }
-}
-
-/*自定义滚动条*/
-::-webkit-scrollbar {
-    width: 9px;
-    height: 9px;
-}
-
-::-webkit-scrollbar-thumb {
-    background-color: #b0c0d0;
-    border-radius: 4px
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background-color: #CDD9E6
-}
-
-::-webkit-scrollbar-thumb:active {
-    background-color: #b0c0d0
-}
-
-::-webkit-scrollbar-track-piece {
-    background-color: transparent
-}
-
-.tipspop {
     position: fixed;
-    top: 50%;
-    left: 50%;
-    padding: 30px 50px;
-    border-radius: 10px;
-    transform: translate(-50%, -50%);
+    bottom: 0;
+    background: #fff;
+    border-top:1px solid #ccc;
+    z-index: 1;
+}
+#footer_content{
+    width: 100%;
+}
+.footer_list{
+    width: 20%;
+    float: left;
+    text-align: center
+}
+.footer_list img{
+ display: block;
+ margin: 6px auto;
+ width: 17px;
+}
+.footer_list a{
+    color: #000;
+    font-size: 14px
+}
+.footer_list .no_act{
+    display: none;
+}
+/* 头部部导航栏样式（有导航 */
+#header{
+    background: #26C688;
+    height: 99px;
     color: #fff;
-    background-color: rgba(0, 0, 0, 0.6);
-    z-index: 1000;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    z-index: 999
+}
+#header_top{
+    height: 60px;
+    text-align: center;
+    line-height: 60px;
+    position: relative;
+}
+#header_img{
+    position: absolute;
+    height: 40px;
+    width: 40px;
+    background: #fff;
+    border-radius: 50%;
+    text-align: center;
+    top: 10px;
+    left: 13px;
+    line-height: 40px;
+}
+#header_img img{
+    width: 23px;
+}
+#header_top span{
+    font-weight: bold;
+    font-size: 16px;
+}
+#header_nav ul li{
+    float: left;
+    width: 20%;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+}
+#header_nav ul li span{
+    display: block;
+    height: 30px;
+    line-height: 30px;
+    width: 40px;
+    margin: 0 auto;
+    font-size: 16px;
+    text-align: center
+}
+/* 头部无导航栏样式 */
+#otherheader{
+    height: 50px;
+    background: #26C688;
+    width: 100%;
+    text-align: left;
+    position: fixed;
+    
+}
+#otherheader .otherheader_left{
+    float: left;
+    height: 50px;
+    line-height: 50px;
+    position: absolute;
+    left: 10px;
+}
+#otherheader .otherheader_text{
+    text-align: center;
+    height: 50px;
+    line-height: 50px;
+    font-size:17px;
+    color: #fff; 
+}
+#otherheader .otherheader_right{
+    float: right;
+    position: absolute;
+    right: 10px;
+    top: 13px;
+}
+#otherheader .otherheader_right img{
+    width: 24px;
+}
+/* 竞猜头部公共样式 */
+#pkend_header{
+    position: fixed;
+    top: 0;
+    height: 94;
+    background: #26C688;
+    width: 100%;
+    z-index: 12;
+    color: #fff;
+}
+#pkend_header_left{
+    position: absolute;
+    top: 20px;
+    left: 15px;
+}
+#pkend_header_left img{
+    width: 11px;
+}
+#pkend_header ul{
+    margin: 0 auto;
+    text-align: center;
+    margin: 0 auto;
+    width: 159px;
+}
+#pkend_header ul li{
+    float: left;
+}
+#pkend_header ul li img{
+    width: 30px;
+    display: block;
+    margin-top:15px;
+}
+.pkend_text{
+    margin: 0 15px;
+}
+#pk_name{
+    height: 30px;
+    background:url(../img/pk_name_bg.png) no-repeat;
+    background-size:100% 100%; 
+    width: 100%;
+    margin-top: 15px;
+    line-height: 30px;
+}
+.pkend_bottom_text{
+    font-size: 16px;
+}
+#pk_name{
+    text-align: center;
+    position: relative;
+}
+.pk_name_lfet{
+    width: 50%;
+    position: absolute;
+    left: 0;
+    text-align: center;
+}
+.pk_name_right{
+    width: 50%;
+    position: absolute;
+    right: 0;
+    text-align: center;
+    top: 0;
+}
+.pkend_results{
+    position: relative;
+    top: 15px;
 }
