--- a/css/hw.css
+++ b/css/hw.css
@@ -11,9 +11,9 @@ html, body{
 }
 #hw_content{
     width: 100%;
-    height: 320px;
+    height: 370px;
     background: url(../img/ling_bg.png) no-repeat;
-    background-size: 110% 110%;
+    background-size: 98% 98%;
     background-position:center center;
     margin: 0 auto;
     color: #E9C687;
@@ -29,11 +29,11 @@ html, body{
     font-weight: bold;
 }
 .ewm{
-    width: 120px;
-    height: 120px;
+    width: 130px;
+    height: 130px;
     background: #fff;
     margin: 0 auto;
 }
 .hw_bottom{
-
+    margin-top:13px;
 }
